ハンバーガーメニュー作成途中

--- a/index.html
+++ b/index.html
@@ -8,5 +8,31 @@
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="header-inner">
+        <h1>
+          <a href="#">
+            <img src="./img/logo-r.svg" alt="ロゴ画像" />
+          </a>
+        </h1>
+        <nav class="header-nav" id="js-nav">
+          <ul>
+            <li><a href="#">BBBが選ばれる理由</a></li>
+            <li><a href="#">受講生の声</a></li>
+            <li><a href="#">スクールの概要</a></li>
+            <li><a href="#">無料体験に申し込む</a></li>
+          </ul>
+        </nav>
+        <button class="hamburger active" id="js-hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+    <script src="./index.js"></script>
+  </body>
 </html>
