ハンバーガメニュー完成

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#">無料体験に申し込む</a></li>
           </ul>
         </nav>
-        <button class="hamburger active" id="js-hamburger">
+        <button class="hamburger" id="js-hamburger">
           <span></span>
           <span></span>
           <span></span>
