ナビゲーションのスタイル変更

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
     <header>
       <h1>
         <a href="#">
-          <img src="./img/logo-r.svg" alt="ロゴ画像" />
+          <img src="./img/logo-r.svg" alt="ロゴ画像赤" />
         </a>
       </h1>
       <nav class="header-nav" id="js-nav">
+        <img src="./img/logo-w.svg" alt="ロゴ画像白" />
         <ul>
           <li><a href="#">BBBが選ばれる理由</a></li>
           <li><a href="#">受講生の声</a></li>
           <li><a href="#">スクールの概要</a></li>
-          <li><a href="#">無料体験に申し込む</a></li>
+          <li class="nav-btn"><a href="#">無料体験に申し込む</a></li>
         </ul>
       </nav>
       <button class="hamburger" id="js-hamburger">
