--- a/index.html
+++ b/index.html
@@ -30,8 +30,22 @@
         <span></span>
       </button>
     </header>
-    <main></main>
+    <main>
+      <section class="top">
+        <div class="top-img">
+          <img src="" alt="トップ画像" id="slide-img" class="slider" />
+        </div>
+        <div class="top-text">
+          <h2>話して学ぼう！<br />BBB英会話スクール</h2>
+          <button>
+            <a href="#">無料体験はこちら <span>></span></a>
+          </button>
+        </div>
+      </section>
+    </main>
     <footer></footer>
     <script src="./index.js"></script>
   </body>
 </html>
+
+<!-- top-imgを3枚用意してスライドショーにする -->
