--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
     <main>
       <section class="top">
         <div class="top-img">
-          <img src="" alt="トップ画像" id="slide-img" class="slider" />
+          <img
+            src="./img/language-school-834138_1280.jpg"
+            alt="トップ画像"
+            id="slide-img"
+            class="slider"
+          />
         </div>
         <div class="top-text">
           <h2>話して学ぼう！<br />BBB英会話スクール</h2>
@@ -47,5 +52,3 @@
     <script src="./index.js"></script>
   </body>
 </html>
-
-<!-- top-imgを3枚用意してスライドショーにする -->
