reasonクラスの位置修正

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
           </button>
         </div>
       </section>
+
+      <section class="reason">
+        <h2 class="section-title">BBBが選ばれる理由</h2>
+      </section>
     </main>
     <footer></footer>
     <script src="./index.js"></script>
