--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>english-school</title>
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
@@ -50,6 +57,18 @@
 
       <section class="reason">
         <h2 class="section-title">BBBが選ばれる理由</h2>
+        <div class="reason-content">
+          <div class="reason-text1">
+            <i class="fa-solid fa-laptop"></i>
+            <h3>オンライン対応</h3>
+            <p>24時間いつでも受講できる！</p>
+          </div>
+          <div class="reason-text2">
+            <i class="fa-solid fa-user"></i>
+            <h3>講師はネイティブ</h3>
+            <p>お気に入りの講師が自由に選べる！</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
