--- a/index.html
+++ b/index.html
@@ -59,14 +59,22 @@
         <h2 class="section-title">BBBが選ばれる理由</h2>
         <div class="reason-content">
           <div class="reason-text1">
-            <i class="fa-solid fa-laptop"></i>
-            <h3>オンライン対応</h3>
-            <p>24時間いつでも受講できる！</p>
+            <div class="item">
+              <i class="fa-solid fa-laptop"></i>
+            </div>
+            <div class="item-text">
+              <h3>オンライン対応</h3>
+              <p>24時間いつでも受講できる！</p>
+            </div>
           </div>
           <div class="reason-text2">
-            <i class="fa-solid fa-user"></i>
-            <h3>講師はネイティブ</h3>
-            <p>お気に入りの講師が自由に選べる！</p>
+            <div class="item">
+              <i class="fa-solid fa-user"></i>
+            </div>
+            <div class="item-text">
+              <h3>講師はネイティブ</h3>
+              <p>お気に入りの講師が自由に選べる！</p>
+            </div>
           </div>
         </div>
       </section>
