フェードイン1つめ完了

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <section class="reason">
         <h2 class="section-title">BBBが選ばれる理由</h2>
         <div class="reason-content">
-          <div class="reason-text1">
+          <div class="reason-text1 inview_re fadeIn-left">
             <div class="item">
               <i class="fa-solid fa-laptop"></i>
             </div>
@@ -80,6 +80,13 @@
       </section>
     </main>
     <footer></footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.min.js"
+      integrity="sha512-D68mBFX2aQwVh2wV6uCDLmabIveaSQL3uVUo2Ze7VwxIeOcAd4C1/JagkVoObb/NLkYDrdvY3JHK1KOfenHVcA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="./index.js"></script>
   </body>
 </html>
