--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <p>24時間いつでも受講できる！</p>
             </div>
           </div>
-          <div class="reason-text2">
+          <div class="reason-text2 inview_re fadeIn-right">
             <div class="item">
               <i class="fa-solid fa-user"></i>
             </div>
