voiceのマークアップ完了

--- a/index.html
+++ b/index.html
@@ -78,6 +78,42 @@
           </div>
         </div>
       </section>
+
+      <section class="voice">
+        <h2 class="section-title">受験生の声</h2>
+        <div class="voice-content">
+          <p class="voice-text">
+            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          </p>
+          <div class="voice-profile">
+            <img src="" alt="アイコン" class="icon" />
+            <p>○○○さん</p>
+            <p>大学生</p>
+          </div>
+        </div>
+
+        <div class="voice-content">
+          <p class="voice-text">
+            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          </p>
+          <div class="voice-profile">
+            <img src="" alt="アイコン" class="icon" />
+            <p>○○○さん</p>
+            <p>会社員</p>
+          </div>
+        </div>
+
+        <div class="voice-content">
+          <p class="voice-text">
+            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          </p>
+          <div class="voice-profile">
+            <img src="" alt="アイコン" class="icon" />
+            <p>○○○さん</p>
+            <p>自営業</p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
