sp用ふきだし完成

--- a/index.html
+++ b/index.html
@@ -82,9 +82,15 @@
       <section class="voice">
         <h2 class="section-title">受験生の声</h2>
         <div class="voice-content">
-          <p class="voice-text">
-            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-          </p>
+          <div class="voice-text">
+            <p>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <p>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <div class="balloon"></div>
+          </div>
           <div class="voice-profile">
             <img src="" alt="アイコン" class="icon" />
             <p>○○○さん</p>
@@ -93,9 +99,15 @@
         </div>
 
         <div class="voice-content">
-          <p class="voice-text">
-            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-          </p>
+          <div class="voice-text">
+            <p>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <p>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <div class="balloon"></div>
+          </div>
           <div class="voice-profile">
             <img src="" alt="アイコン" class="icon" />
             <p>○○○さん</p>
@@ -104,9 +116,15 @@
         </div>
 
         <div class="voice-content">
-          <p class="voice-text">
-            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-          </p>
+          <div class="voice-text">
+            <p>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <p>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+          <div class="balloon"></div>
           <div class="voice-profile">
             <img src="" alt="アイコン" class="icon" />
             <p>○○○さん</p>
