--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="balloon"></div>
           </div>
           <div class="voice-profile">
-            <img src="" alt="アイコン" class="icon" />
+            <img src="./img/icon-student1.png" alt="アイコン" class="icon" />
             <p>○○○さん</p>
             <p>大学生</p>
           </div>
@@ -109,7 +109,7 @@
             <div class="balloon"></div>
           </div>
           <div class="voice-profile">
-            <img src="" alt="アイコン" class="icon" />
+            <img src="./img/icon-student2.png" alt="アイコン" class="icon" />
             <p>○○○さん</p>
             <p>会社員</p>
           </div>
@@ -126,7 +126,7 @@
           </div>
           <div class="balloon"></div>
           <div class="voice-profile">
-            <img src="" alt="アイコン" class="icon" />
+            <img src="./img/icon-student3.png" alt="アイコン" class="icon" />
             <p>○○○さん</p>
             <p>自営業</p>
           </div>
