--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
         </div>
 
-        <div class="voice-content">
+        <div class="voice-content voice-flex">
           <div class="voice-text">
             <p>
               テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
