--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
             <p>
               テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
             </p>
-            <div class="balloon"></div>
           </div>
           <div class="voice-profile">
             <img src="./img/icon-student1.png" alt="アイコン" class="icon" />
@@ -99,14 +98,13 @@
         </div>
 
         <div class="voice-content voice-flex">
-          <div class="voice-text">
+          <div class="voice-text balloon-right">
             <p>
               テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
             </p>
             <p>
               テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
             </p>
-            <div class="balloon"></div>
           </div>
           <div class="voice-profile">
             <img src="./img/icon-student2.png" alt="アイコン" class="icon" />
@@ -124,7 +122,6 @@
               テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
             </p>
           </div>
-          <div class="balloon"></div>
           <div class="voice-profile">
             <img src="./img/icon-student3.png" alt="アイコン" class="icon" />
             <p>○○○さん</p>
