ズームインアニメーション追加

--- a/index.html
+++ b/index.html
@@ -81,51 +81,53 @@
 
       <section class="voice">
         <h2 class="section-title">受験生の声</h2>
-        <div class="voice-content">
-          <div class="voice-text">
-            <p>
-              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-            </p>
-            <p>
-              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-            </p>
+        <div class="zoomInTrigger">
+          <div class="voice-content">
+            <div class="voice-text">
+              <p>
+                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+              </p>
+              <p>
+                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+              </p>
+            </div>
+            <div class="voice-profile">
+              <img src="./img/icon-student1.png" alt="アイコン" class="icon" />
+              <p>○○○さん</p>
+              <p>大学生</p>
+            </div>
           </div>
-          <div class="voice-profile">
-            <img src="./img/icon-student1.png" alt="アイコン" class="icon" />
-            <p>○○○さん</p>
-            <p>大学生</p>
-          </div>
-        </div>
 
-        <div class="voice-content voice-flex">
-          <div class="voice-text balloon-right">
-            <p>
-              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-            </p>
-            <p>
-              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-            </p>
+          <div class="voice-content voice-flex">
+            <div class="voice-text balloon-right">
+              <p>
+                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+              </p>
+              <p>
+                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+              </p>
+            </div>
+            <div class="voice-profile">
+              <img src="./img/icon-student2.png" alt="アイコン" class="icon" />
+              <p>○○○さん</p>
+              <p>会社員</p>
+            </div>
           </div>
-          <div class="voice-profile">
-            <img src="./img/icon-student2.png" alt="アイコン" class="icon" />
-            <p>○○○さん</p>
-            <p>会社員</p>
-          </div>
-        </div>
 
-        <div class="voice-content">
-          <div class="voice-text">
-            <p>
-              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-            </p>
-            <p>
-              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-            </p>
-          </div>
-          <div class="voice-profile">
-            <img src="./img/icon-student3.png" alt="アイコン" class="icon" />
-            <p>○○○さん</p>
-            <p>自営業</p>
+          <div class="voice-content">
+            <div class="voice-text">
+              <p>
+                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+              </p>
+              <p>
+                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+              </p>
+            </div>
+            <div class="voice-profile">
+              <img src="./img/icon-student3.png" alt="アイコン" class="icon" />
+              <p>○○○さん</p>
+              <p>自営業</p>
+            </div>
           </div>
         </div>
       </section>
