summaryレスポンシブ対応完了

--- a/index.html
+++ b/index.html
@@ -131,6 +131,42 @@
           </div>
         </div>
       </section>
+
+      <section class="summary">
+        <h2 class="section-title">スクールの概要</h2>
+        <div class="summary-container">
+          <div class="summary-item">
+            <p class="item-title">レッスン内容</p>
+            <p class="item-subtitle">LESSON</p>
+            <p class="item-text">
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+          <div class="summary-item">
+            <p class="item-title">料金プラン</p>
+            <p class="item-subtitle">PRICE</p>
+            <p class="item-text">
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+        </div>
+        <div class="summary-container">
+          <div class="summary-item">
+            <p class="item-title">講師のご紹介</p>
+            <p class="item-subtitle">TEACHER</p>
+            <p class="item-text">
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+          <div class="summary-item">
+            <p class="item-title">BBBのQ&A</p>
+            <p class="item-subtitle">Q&A</p>
+            <p class="item-text">
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
