--- a/index.html
+++ b/index.html
@@ -176,7 +176,42 @@
         <button>無料体験に申し込む</button>
       </section>
     </main>
-    <footer></footer>
+
+    <footer>
+      <div class="menu">
+        <ul>
+          <li class="menu-title">コース一覧</li>
+          <li>スタンダードプラン</li>
+          <li>プレミアムプラン</li>
+          <li>短期集中プラン</li>
+          <li>日常英会話コース</li>
+          <li>ビジネス英会話コース</li>
+        </ul>
+
+        <ul>
+          <li class="menu-title">講師紹介</li>
+          <li>講師について</li>
+          <li>講師一覧</li>
+          <li>講師を探す</li>
+        </ul>
+
+        <ul>
+          <li class="menu-title">会社概要</li>
+          <li>会社概要</li>
+          <li>採用情報</li>
+        </ul>
+
+        <ul>
+          <li class="menu-title">BBBについて</li>
+          <li>よくあるご質問</li>
+          <li>ご利用規約</li>
+          <li>プライバシーポリシー</li>
+          <li>お問い合わせ</li>
+        </ul>
+      </div>
+
+      <p class="copyright">&copy; BBB English School</p>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.min.js"
